Added navbar link navigation

--- a/article.html
+++ b/article.html
@@ -64,7 +64,7 @@
                     <div class="links">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="#subscribe">Subscribe</a></li>
+                        <li><a href="#main-footer">Subscribe</a></li>
                     </div>
                 </ul>
                 <div class="social">
@@ -80,10 +80,6 @@
                     <a href="https://youtube.com" target="_blank"
                         ><i class="fab fa-youtube fa-2x"></i
                     ></a>
-                </div>
-                <div class="search">
-                    <a href="" id="search"><i class="fas fa-search"></i></a>
-                    <input type="search" name="search" id="search" />
                 </div>
             </div>
         </nav>
