--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta
             name="description"
-            content="A food blog with simple and tasty recipes."
+            content="Vivek Jha's personal website"
         />
         <meta
             name="keywords"
-            content="cooking, baking, cooking blog, cooking recipes, whole food"
+            content="medical, travelling, football, movies, music"
         />
-        <meta name="author" content="John Doe" />
+        <meta name="author" content="Vivek Jha" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <link rel="stylesheet" href="css/global.css" />
@@ -27,27 +27,7 @@
             media="only screen and (max-width: 768px)"
             href="css/mobile.css"
         />
-        <title>My Cooking Blog | Whole Food Recipes</title>
-        <link
-            rel="apple-touch-icon"
-            sizes="120x120"
-            href="apple-touch-icon.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="favicon-32x32.png"
-        />
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="16x16"
-            href="favicon-16x16.png"
-        />
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-        <link rel="manifest" href="site.webmanifest" />
-        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5" />
+        <title>Vivek Jha</title>
         <meta name="msapplication-TileColor" content="#2b5797" />
         <meta name="theme-color" content="#ffffff" />
     </head>
@@ -57,14 +37,13 @@
             <div class="container">
                 <div class="logo">
                     <a href="index.html"
-                        ><img src="img/logo.png" alt="MyCookingBlog"
-                    /></a>
+                        >
+                        Vivek Jha
+                    </a>
                 </div>
                 <ul>
                     <div class="links">
-                        <li><a href="index.html" class="current">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="#main-footer">Subscribe</a></li>
+                        <!-- <li><a href="index.html" class="current">Home</a></li> -->
                     </div>
                 </ul>
                 <div class="social">
@@ -88,19 +67,28 @@
         <header id="showcase">
             <div class="container">
                 <div class="showcase-container">
-                    <div class="category category-salads">Salads</div>
-                    <h1>Shaved Carrot and Parsley Salad</h1>
+                    <h1>Hi there, I am <span class="focussed-text">Vivek Jha</span></h1>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit. Ratione aliquid dolores laborum aspernatur soluta,
-                        eos ducimus quaerat dicta voluptate? Itaque molestias
-                        repellendus, excepturi debitis sit accusantium amet
-                        consequatur illum maiores sequi ipsa. Temporibus fugit
-                        culpa autem delectus voluptates pariatur fugiat?
+                        I am a Nepalese doctor currently preparing for my PG exams. I have graduated
+                        from Sir Salimullah Medical College (SSMC), Dhaka. I like to write about a variety of topics.
+                          My interests include - 
+                        <ul>
+                            <li><span class="focussed-text">Music</span> - Some of my favorite artists are Bon Jovi, Coldplay, Poets of the football
+                                , John Denver etc 
+                            </li>
+                            <li><span class="focussed-text">Movies</span> - Some of my favorite movies are The Godfather trilogy, The pianist,
+                                The dark knight etc </li>
+                            <li><span class="focussed-text">Fitness</span> - I love playing cricket and lifting weights</li>
+                            <li><span class="focussed-text">Sports</span> - I enjoy watching tennis and football. My favorite athletes include Rahul Dravid,
+                                Sachin Tendulkar, Lionel Messi, Christiano Ronaldo, Novak Djokovic, Roger Federrer, Rafael 
+                                Nadal etc
+                            </li>
+                        </ul>
                     </p>
-                    <a href="article.html" class="btn"
-                        ><i class="fas fa-chevron-right"></i> Read More</a
-                    >
+                    <a class="colored-button" href="https://www.linkedin.com/in/vivek-jha-61a76b1b9/" target="_blank">Connect with me</a>
+                </div>
+                <div class="image-container">
+                    <img src ="./img/profile.jpeg" alt="Vivek Jha image" />
                 </div>
             </div>
         </header>
@@ -108,222 +96,32 @@
         <!-- Recipes -->
         <section id="recipes">
             <div class="container">
-                <h2>Chef 's Picks</h2>
+                <h2>My articles</h2>
                 <div class="grid-container">
                     <article class="card">
-                        <a href="article.html"
+                        <a href="/blogs/why-i-admire-messi.html"
                             ><img
-                                src="img/recipes/lunch1.jpg"
-                                alt="Vareniki Pelmeni"
+                                src="img/messi.jpeg"
+                                alt="Lionel Messi"
                         /></a>
                         <div>
-                            <div class="category category-lunch">Lunch</div>
+                            <div class="category category-lunch">Sports</div>
                             <h3>
-                                <a href="article.html">Vareniki Pelmeni</a>
+                                <a href="/blogs/why-i-admire-messi.html">
+                                    Why I admire messi
+                                </a>
                             </h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Modi ut voluptatibus autem
-                                ipsam voluptatum aliquam architecto? Quia rem ut
-                                dolorum.
+                                Lionel Messi is also known as the GOAT of football.
+                                I have been an ardent fan of his ever since I started watching La Liga
+                                matches in my hostel during my bachelor days.
                             </p>
                         </div>
                     </article>
 
-                    <article class="card">
-                        <a href="article.html">
-                            <img
-                                src="img/recipes/appetizers1.png"
-                                alt="Shish Kebab"
-                        /></a>
-                        <div>
-                            <div class="category category-appetizers">
-                                Appetizers
-                            </div>
-                            <h3>
-                                <a href="article.html">Shish Kebab</a>
-                            </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Quos deserunt iste delectus
-                                obcaecati omnis consequatur natus quo earum,
-                                alias cum sed culpa, expedita aut ipsam, quidem
-                                sint commodi. Fuga, placeat?
-                            </p>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <a href="article.html"
-                            ><img
-                                src="img/recipes/salads1.png"
-                                alt="Raw Food Salad"
-                        /></a>
-                        <div>
-                            <div class="category category-salads">Salads</div>
-                            <h3>
-                                <a href="article.html">Raw Food Salad</a>
-                            </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Excepturi dolore quibusdam rem
-                                voluptates asperiores vero.
-                            </p>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <a href="article.html"
-                            ><img
-                                src="img/recipes/beverages1.png"
-                                alt="Picture of wines"
-                        /></a>
-                        <div>
-                            <div class="category category-beverages">
-                                Beverages
-                            </div>
-                            <h3>
-                                <a href="article.html">Which wine to serve?</a>
-                            </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Saepe dolorum quas repellat
-                                quo error velit impedit quae consectetur qui,
-                                magni unde fuga cumque voluptate consequuntur.
-                                Officiis non, porro ex in temporibus quo sint,
-                                blanditiis fugit aperiam ducimus nostrum minus
-                                fugiat.
-                            </p>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <a href="article.html"
-                            ><img
-                                src="img/recipes/soups1.png"
-                                alt="Pumpkin Soup"
-                        /></a>
-                        <div>
-                            <div class="category category-soups">Soups</div>
-                            <h3>
-                                <a href="article.html">Pumpkin Soup</a>
-                            </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Saepe accusantium ipsum harum
-                                ex! Quisquam, quibusdam!
-                            </p>
-                        </div>
-                    </article>
-
-                    <article class="card bg-dark">
-                        <a href="article.html"
-                            ><img
-                                src="img/recipes/lunch2.png"
-                                alt="Fresh Fettuccine Pasta"
-                        /></a>
-                        <div>
-                            <div class="category category-lunch">Lunch</div>
-                            <h3>
-                                <a href="article.html"
-                                    >Fresh Fettuccine Pasta</a
-                                >
-                            </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur,
-                                adipisicing elit. Qui nostrum alias sapiente
-                                suscipit inventore ea labore, debitis, obcaecati
-                                necessitatibus, fugit aliquid provident!
-                            </p>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <a href="article.html"
-                            ><img
-                                src="img/recipes/desserts1.jpg"
-                                alt="Apple Pie"
-                        /></a>
-                        <div>
-                            <div class="category category-desserts">
-                                Desserts
-                            </div>
-                            <h3>
-                                <a href="article.html">Apple Pie</a>
-                            </h3>
-                            <p>
-                                Lorem, ipsum dolor sit amet consectetur
-                                adipisicing elit. Amet velit, eius, tempora
-                                officiis laboriosam magni voluptate.
-                            </p>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <a href="article.html"
-                            ><img
-                                src="img/recipes/breakfast1.png"
-                                alt="Maple Syrup Pancakes"
-                        /></a>
-                        <div>
-                            <div class="category category-breakfast">
-                                Breakfast
-                            </div>
-                            <h3>
-                                <a href="article.html">Maple Syrup Pancakes</a>
-                            </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Sequi in placeat illo cumque,
-                                delectus nesciunt magni dolorem vitae
-                                repellendus eos explicabo eius dicta quam dolor
-                                reiciendis quae voluptas?
-                            </p>
-                        </div>
-                    </article>
                 </div>
             </div>
         </section>
 
-        <!-- Footer -->
-        <footer id="main-footer">
-            <div class="grid-container">
-                <div class="logo">
-                    <img src="img/logo.png" alt="MyCookingBlog" />
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing
-                        elit. Qui est, sed similique sint iure voluptates
-                        laudantium voluptatem eum nostrum assumenda! Ut, sed
-                        dolorem. Omnis, consectetur?
-                    </p>
-                </div>
-                <div class="newsletter">
-                    <h3>Subscribe to our newsletter</h3>
-                    <p>You will receive weekly recipes in your e-mail inbox.</p>
-                    <form action="submit.php">
-                        <input
-                            type="email"
-                            name="email"
-                            id="email"
-                            placeholder="Enter Email..."
-                        />
-                        <input type="submit" value="Subscribe" class="btn" />
-                    </form>
-                </div>
-                <div class="links">
-                    <h3>Site Links</h3>
-                    <ul class="list">
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer">
-                    <p>
-                        Design by
-                        <span
-                            ><a href="https://github.com/krisp3t"
-                                >krisp3t</a
-                            ></span
-                        >
-                    </p>
-                </div>
-            </div>
-        </footer>
     </body>
 </html>
