fixed linting for messi article, mobile responsiveness etc

--- a/blogs/why-i-admire-messi.html
+++ b/blogs/why-i-admire-messi.html
@@ -95,6 +95,19 @@
                                 I have been an ardent fan of his ever since I started watching La Liga
                                 matches in my hostel during my bachelor days.
                         </p>
+                        <p>
+                            What I love the most about him is his immense talent and his hardwork. The sheer dedication and effort he
+                                puts in his training and matches is incredible. 
+                        </p>
+                        <p>
+                            There are many athletes who have the same mentality and work ethics as him but what separates Messi from the 
+                                rest is his humility. Despite being a global superstar of the sport and a legend,he is very humble and a nice person. His personal life and friendships with 
+                                Suarez or Aguero is very cordial and warm.
+                        </p>
+                        <p>
+                            I am priviledged to live in his era and watch him play. I fear the day he hangs up his boots. Football will go on but it
+                            will not remain the same without him. The joy that he brings to his fan's hearts is incredible.
+                        </p>
                         
                     </article>
                     <aside class="card bg-primary about-categories list">
