--- a/index.html
+++ b/index.html
@@ -70,20 +70,18 @@
                     <h1>Hi there, I am <span class="focussed-text">Vivek Jha</span></h1>
                     <p>
                         I am a Nepalese doctor currently preparing for USMLE Step 2. I have graduated
-                        from Sir Salimullah Medical College Mitford Hospital (SSMCMH), Dhaka.I love internal medicine and the oppurtinity to get involved in the longitudinal care of 
+                        from Sir Salimullah Medical College Mitford Hospital (SSMCMH), Dhaka. I love internal medicine and the oppurtinity to get involved in the longitudinal care of 
                         my patients.
                           My interests include - 
                         <ul>
-                            <li><span class="focussed-text">Music</span> - Some of my favorite artists are Bob Dylan,Imagine dragons,Pink Floyd,Coldplay,Guns and Roses,Mohit Chauhan,
-                             Lucky Ali, etc 
+                            <li><span class="focussed-text">Music</span> - Some of my favorite artists are Bob Dylan, Imagine dragons, Pink Floyd, 
+                                Coldplay, Guns and Roses, Mohit Chauhan, Lucky Ali, etc. 
                             </li>
-                            <li><span class="focussed-text">Movies</span> - Some of my favorite movies are The Godfather trilogy, The Pianist,
-                                The Schindler's list,Ironman,A beautiful mind, etc </li>
-                            <li><span class="focussed-text">Fitness</span> - I love to play cricket,ride motorcycles and workout.</li>
-                            <li><span class="focussed-text">Sports</span> - I enjoy watching good movies,tennis and football. My favorite athletes include 
+                            <li><span class="focussed-text">Movies</span> - Some of my favorite movies are The Godfather trilogy, The Pianist, Schindler's list, Ironman, A beautiful mind etc. </li>
+                            <li><span class="focussed-text">Fitness</span> - I love to play cricket, ride motorcycles and workout</li>
+                            <li><span class="focussed-text">Sports</span> - I enjoy watching tennis and football. My favorite athletes include 
                           
-                               Lionel Messi,Roger Federrer, Novak Djokovic,Sachin Tendulkar and Virat Kohli.
-                                Nadal etc
+                               Lionel Messi,Roger Federrer, Novak Djokovic, Sachin Tendulkar, Virat Kohli, Nadal etc
                             </li>
                         </ul>
                     </p>
@@ -116,11 +114,7 @@
                             <p>
                                 Lionel Messi is also known as the GOAT of football.
                                 I have been an ardent fan of his ever since I started watching La Liga
-                                matches in my hostel during my bachelor days.What I love the most about him is his immense talent and his hardwork.The sheer dedication and effort he
-                                puts in his training and matches is incredible.There are many athletes who have the same mentality and work ethics as him but what separates Messi from the 
-                                rest is his humility.Despite being a global superstar of the sport and a legend,he is very humble and a nice person.His personal life and friendships with 
-                                Suarez or Aguero is very cordial and warm.I am priviledged to live in his era and watch him play.I fear the day he hangs up his boots.Football will go on but it
-                                will not remain the same without him.The joy that he brings to his fan's hearts is incredible.
+                                matches in my hostel during my bachelor days.
                             </p>
                         </div>
                     </article>
